- Fixed size of job description text (way too small in Chrome). - Relates to issue #672919.

--- a/templates/en/css/dynamic_css.tpl.css
+++ b/templates/en/css/dynamic_css.tpl.css
@@ -2162,7 +2162,7 @@ a.author_id_link:hover {
 }
 
 .research-record-note {
-    font-size: 5px;
+    font-size: 10px;
     width: 180px;
 }
 
